# jax-fli-result

./: .gitignore  .pre-commit-config.yaml  README.md  TODOS.md  creation.py  inspection.py  pyproject.toml  script_compare.py
.github/workflows/: formatting.yml
analysis/: 02a-density_width.ipynb  02b-multi_shell_comparison.ipynb  03-painting_options.ipynb  density3d_analysis.ipynb  spherical_kappa_analysis.ipynb  utils.py
app/: Home.py
app/.streamlit/: config.toml
app/components/: command_builder.py  cosmo_form.py  dynamic_list.py  integration_form.py  lensing_form.py  lightcone_form.py  misc_forms.py  output_form.py  prior_cosmo_form.py  save_figure.py  sim_form.py  simulation_settings_form.py  slurm_form.py  stepping_plot.py  styled_container.py
app/pages/: 1_Simulate.py  2_Grid.py  3_Samples.py  4_Infer.py  5_Born_RT.py  5_Extract.py  6_Born_RT.py  7_Dorian_RT.py
app/views/: 0_Home.py  1_Simulate.py  2_Samples.py  3_FullFieldInference.py  3_Infer.py  4_2PCFInference.py  4_Extract.py  5_Born_RT.py  5_Extract.py  6_Born_RT.py  6_Dorian_RT.py  7_Analysis.py  7_Dorian_RT.py  8_Spectra.py  9_Analysis.py
app/views/_7_Analysis/: __init__.py  density_analysis.py  density_analysis_compute.py  density_analysis_form.py  flat_analysis.py  form.py  kappa_spherical_analysis.py  spherical_analysis.py  spherical_analysis_compute.py  spherical_analysis_form.py  utils.py
app/views/_9_Analysis/: __init__.py  density_analysis_compute.py  density_analysis_form.py  flat_analysis.py  form.py  spherical_analysis_compute.py  spherical_analysis_form.py  utils.py
launcher/: __init__.py  born_rt.py  dorian_rt.py  extract.py  grid.py  infer.py  main.py  parser.py  samples.py  simulate.py
results/: run_00_validating_simple_pm.sh  run_01_step_size.sh  run_02_against_cosmo_grid.sh
results/01-step_size/: publish.py  tree.txt
results/runners/: 00-validate-spherical-binning.sh  02-against-cosmo-grid.sh  run_00_validating_simple_pm.sh  run_01_step_size.sh  run_02_against_cosmo_grid.sh
