[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-fli-launcher"
version = "0.1.0"
description = "CLI and GUI launcher for jax-fli simulation jobs"
requires-python = ">=3.10"
dependencies = [
    "jax-fli[catalog,benchmark] @ git+https://github.com/ASKabalan/jax-fli@inference-validation",
    "streamlit>=1.30",
    "matplotlib>=3.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
raytrace = [
    "jax-fli[raytrace] @ git+https://github.com/ASKabalan/jax-fli@inference-validation",
]
sampling = [
    "jax-fli[sampling] @ git+https://github.com/ASKabalan/jax-fli@inference-validation",
]
plot = [
    "jax-fli[plot] @ git+https://github.com/ASKabalan/jax-fli@inference-validation",
]

[project.scripts]
fli-launcher = "launcher.main:main"

[tool.setuptools.packages.find]
include = ["launcher*", "app*"]
