[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-fli-launcher"
version = "0.1.0"
description = "CLI and GUI launcher for jax-fli simulation jobs"
requires-python = ">=3.10"
dependencies = [
    "jax-fli[catalog,benchmark] @ git+https://github.com/ASKabalan/jax-fli",
    "streamlit>=1.30",
    "matplotlib>=3.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
raytrace = [
    "jax-fli[raytrace] @ git+https://github.com/ASKabalan/jax-fli",
]
sampling = [
    "jax-fli[sampling] @ git+https://github.com/ASKabalan/jax-fli",
]
plot = [
    "jax-fli[plot] @ git+https://github.com/ASKabalan/jax-fli",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "F821"]
"app/**/*.py" = ["E402"]
"app/*.py" = ["E402"]

[tool.pyright]
reportMissingImports = "none"
